--- a/lib/package.json
+++ b/lib/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jfcere/ngx-markdown"
+    "url": "https://github.com/revolucion/ngx-markdown"
   },
   "keywords": [
     "angular",
