--- a/lib/package.json
+++ b/lib/package.json
@@ -2,7 +2,7 @@
   "name": "ngx-markdown",
   "version": "12.0.1",
   "description": "Angular library that uses marked to parse markdown to html combined with Prism.js for synthax highlights",
-  "homepage": "https://github.com/jfcere/ngx-markdown",
+  "homepage": "https://github.com/revolucion/ngx-markdown",
   "license": "MIT",
   "author": {
     "name": "Jean-Francois Cere",
