--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "coveralls": "cat \"./coverage/lcov.info\" | \"./node_modules/coveralls/bin/coveralls.js\"",
     "gh-pages:build": "yarn build:demo --aot --base-href /ngx-markdown/",
     "gh-pages:deploy": "angular-cli-ghpages --dir=\"dist/demo\" --name=\"CircleCI\" --email=\"circleci@email.com\" --no-silent",
-    "publish:lib": "npm publish ./dist/lib"
+    "publish:lib": "npm publish ./dist/lib",
+    "postinstall": "mv ./dist/* ./ && rmdir ./dist"
   },
   "dependencies": {
     "@angular/animations": "~12.0.0",
@@ -57,7 +58,7 @@
     "@angular/router": "~12.0.0",
     "gumshoejs": "^5.1.2",
     "hammerjs": "~2.0.8",
-    "ngx-markdown": "file:./dist/lib",
+    "ngx-markdown": "file:./lib",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "web-animations-js": "^2.3.2",
