--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@angular/router": "~12.0.0",
     "gumshoejs": "^5.1.2",
     "hammerjs": "~2.0.8",
-    "ngx-markdown": "file:./lib",
+    "ngx-markdown": "file:./dist/lib",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "web-animations-js": "^2.3.2",
