--- a/lib/package.json
+++ b/lib/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "ngx-markdown",
-  "version": "12.0.1",
-  "description": "Angular library that uses marked to parse markdown to html combined with Prism.js for synthax highlights",
+  "name": "@revolucion/ngx-markdown-fia",
+  "version": "12.0.1--1",
+  "description": "Angular library that uses marked to parse markdown to html combined with Prism.js for synthax highlights. Forked from ngx-markdown.",
   "homepage": "https://github.com/revolucion/ngx-markdown",
   "license": "MIT",
   "author": {
-    "name": "Jean-Francois Cere",
-    "email": "jfcere@hotmail.com"
+    "name": "Wes Saalmink",
+    "email": "wes@vivalarevolucion.nl"
   },
   "repository": {
     "type": "git",
@@ -33,9 +33,9 @@
     "tslib": "^2.1.0"
   },
   "peerDependencies": {
-    "@angular/common": "^12.0.0",
-    "@angular/core": "^12.0.0",
-    "@angular/platform-browser": "^12.0.0",
+    "@angular/common": "^10.0.0",
+    "@angular/core": "^10.0.0",
+    "@angular/platform-browser": "^10.0.0",
     "rxjs": "^6.6.0",
     "zone.js": "^0.10.2 || ^0.11.4"
   }
