--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "ngx-markdown",
-  "version": "12.0.1",
-  "description": "Angular library that uses marked to parse markdown to html combined with Prism.js for synthax highlights",
+  "name": "@revolucion/ngx-markdown-fia",
+  "version": "12.0.1--1",
+  "description": "Angular library that uses marked to parse markdown to html combined with Prism.js for synthax highlights. Forked from ngx-markdown.",
   "homepage": "https://github.com/revolucion/ngx-markdown",
   "license": "MIT",
   "author": {
-    "name": "Jean-Francois Cere",
-    "email": "jfcere@hotmail.com"
+    "name": "Wes Saalmink",
+    "email": "wes@vivalarevolucion.nl"
   },
   "repository": {
     "type": "git",
@@ -44,17 +44,17 @@
     "publish:lib": "npm publish ./dist/lib"
   },
   "dependencies": {
-    "@angular/animations": "~12.0.0",
-    "@angular/cdk": "~12.0.0",
-    "@angular/common": "~12.0.0",
-    "@angular/compiler": "~12.0.0",
-    "@angular/core": "~12.0.0",
+    "@angular/animations": "~10.0.0",
+    "@angular/cdk": "~10.0.0",
+    "@angular/common": "~10.0.0",
+    "@angular/compiler": "~10.0.0",
+    "@angular/core": "~10.0.0",
     "@angular/flex-layout": "11.0.0-beta.33",
-    "@angular/forms": "~12.0.0",
-    "@angular/material": "~12.0.0",
-    "@angular/platform-browser": "~12.0.0",
-    "@angular/platform-browser-dynamic": "~12.0.0",
-    "@angular/router": "~12.0.0",
+    "@angular/forms": "~10.0.0",
+    "@angular/material": "~10.0.0",
+    "@angular/platform-browser": "~10.0.0",
+    "@angular/platform-browser-dynamic": "~10.0.0",
+    "@angular/router": "~10.0.0",
     "gumshoejs": "^5.1.2",
     "hammerjs": "~2.0.8",
     "ngx-markdown": "file:./lib",
@@ -64,14 +64,14 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.0",
-    "@angular-eslint/builder": "~12.0.0",
-    "@angular-eslint/eslint-plugin": "~12.0.0",
-    "@angular-eslint/eslint-plugin-template": "~12.0.0",
-    "@angular-eslint/template-parser": "~12.0.0",
-    "@angular/cli": "~12.0.0",
-    "@angular/compiler-cli": "~12.0.0",
-    "@angular/language-service": "~12.0.0",
+    "@angular-devkit/build-angular": "~10.0.0",
+    "@angular-eslint/builder": "~10.0.0",
+    "@angular-eslint/eslint-plugin": "~10.0.0",
+    "@angular-eslint/eslint-plugin-template": "~10.0.0",
+    "@angular-eslint/template-parser": "~10.0.0",
+    "@angular/cli": "~10.0.0",
+    "@angular/compiler-cli": "~10.0.0",
+    "@angular/language-service": "~10.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.23.0",
