--- a/lib/package.json
+++ b/lib/package.json
@@ -28,7 +28,7 @@
     "@types/marked": "^1.1.0",
     "emoji-toolkit": "^6.0.1",
     "katex": "^0.12.0",
-    "marked": "^1.1.0",
+    "marked": "https://github.com/revolucion/marked.git",
     "prismjs": "^1.20.0",
     "tslib": "^2.0.0"
   },
